# kusostat

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
migrations/2020-12-30-043055_create_poo/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs  session.rs  tests.rs
src/db/: poo.rs  poo_bleeding.rs  poo_color.rs  poo_form.rs
static/css/: mystyles.css
static/templates/: base.html  index.html
