[package]
name = "kusostat"
version = "0.1.0"
authors = ["yammmt <cu.cs.y20@gmail.com>"]
edition = "2018"

[dependencies]
actix-files = "0.5.0"
actix-session = "0.4.1"
actix-web = "3.3.2"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.7", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
r2d2 = "0.8.9"
serde = "1.0.128"
tera = "1.12.1"

[dev-dependencies]
actix-rt = "2.2.0"
actix-session = "0.4.1"
parking_lot = "0.11.1"
rand = "0.8.4"
